Allowing different types of Decal